# omsk

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-firmware.yml
case/: README.md  infopanel-omsk-ledsvisible-mc.step  infopanel-omsk-rounded-mc.step  knob-S-mc.step  top-encoders-panel-omsk.step
docs/hardware/pcb/: README.md
firmware/: README.md
firmware/omsk_fm/: CMakeLists.txt  README.md  build_all.sh  pico_sdk_import.cmake
firmware/omsk_fm/docs/: MIDI.md  config.md
firmware/omsk_fm/src/: main.cpp  sw_config.h
firmware/omsk_fm/src/leds/: leds.cpp  leds.h
firmware/omsk_fm/src/midi/: midi_handler.cpp  midi_handler.h  midi_map.cpp  midi_map.h
firmware/omsk_fm/src/sequencer/: sequencer.cpp  sequencer.h
firmware/omsk_fm/src/synth/: audio.cpp  audio.h  fm_synth.cpp  fm_synth.h  pra_synth.cpp  pra_synth.h  synth.cpp  synth.h  synth_defs.h
firmware/omsk_fm/src/tables/: dx7_tables.cpp  dx7_tables.h
firmware/omsk_fm/src/ui/: ui_logic.cpp  ui_logic.h  ui_oled.cpp  ui_oled.h  ui_state.h
firmware/omsk_fm/src/usb/: tusb_config.h  usb_config.h  usb_descriptors.c  usb_midi.cpp
firmware/omsk_grain/: .gitignore  CMakeLists.txt  GEMINI.md  README.md  build_all.sh  comit.txt  granular_config.json  pico_sdk_import.cmake
firmware/omsk_grain/audio2h/: go.mod  main.go
firmware/omsk_grain/docs/: MIDI.md  config.md
firmware/omsk_grain/python/: pyproject.toml
firmware/omsk_grain/python/python/: granular_config.json  granular_pro_config.json
firmware/omsk_grain/src/: main.cpp  sw_config.h
firmware/omsk_grain/src/leds/: leds.cpp  leds.h
firmware/omsk_grain/src/midi/: midi_map.cpp  midi_map.h
firmware/omsk_grain/src/synth/: audio_engine.cpp  audio_engine.h  filter.cpp  filter.h  fx.cpp  fx.h  grain.cpp  grain.h  grain_env.cpp  grain_env.h  synth.cpp  synth.h
firmware/omsk_grain/src/tables/: audio_data_stub.h  eg_lut.h  grain_env_lut.h
firmware/omsk_grain/src/ui/: ui_oled.cpp  ui_oled.h  ui_state.cpp  ui_state.h
firmware/omsk_grain/src/usb/: tusb_config.h  usb_config.h  usb_descriptors.cpp  usb_midi.cpp  usb_midi.h
firmware/omsk_midi/: CMakeLists.txt  build_all.sh
firmware/omsk_midi/src/: main.c  sw_config.h
firmware/omsk_midi/src/usb/: tusb_config.h  usb_descriptors.c
firmware/omsk_oled_test/: CMakeLists.txt  build.sh
firmware/omsk_oled_test/src/: main.cpp
firmware/omsk_wave/: CMakeLists.txt  README.md  build_all.sh
firmware/omsk_wave/docs/: MIDI.md  config.md  dsp.md
firmware/omsk_wave/src/: main.c  sw_config.h
firmware/omsk_wave/src/env/: pra32-u2-eg.h
firmware/omsk_wave/src/filt/: moog-ladder-filter.h  pra32-u2-filter.h
firmware/omsk_wave/src/fx/: pra32-u2-chorus-fx.h  pra32-u2-delay-fx.h  pra32-u2-panner.h
firmware/omsk_wave/src/leds/: leds.c  leds.h
firmware/omsk_wave/src/midi/: midi_handler.c  midi_handler.h  midi_map.c  midi_map.h
firmware/omsk_wave/src/sequencer/: sequencer.c  sequencer.h
firmware/omsk_wave/src/synth/: audio.c  audio.c_fresh.c  audio.h  audio_body.c  audio_body_fixed.c  pra32-u2-common.h  pra32-u2-constants.h  pra32-u2-synth.h  pra_synth.c  pra_synth.h  synth.c  synth.c_header_fix.c  synth.h  synth_defs.h  test_clk.c
firmware/omsk_wave/src/tables/: moog-filter-table.h  noise_lut_data.c  noise_lut_data.h  omsk_custom_wave_table.h  omsk_glide_slope_table.h  omsk_lut_data.c  omsk_lut_data.h  omsk_pam4_table.h  omsk_wavetables.c  omsk_wavetables.h  pra32-u2-control-panel-page-table.h  pra32-u2-filter-table.h  vcf_lut_data.cpp  vcf_lut_data.h  vcf_table_manager.cpp  vcf_table_manager.h  vco_lut_data.h
firmware/omsk_wave/src/ui/: pra32-u2-control-panel.h  ui_logic.c  ui_logic.h  ui_oled.c  ui_oled.c_header_fix.c  ui_oled.h  ui_state.h
firmware/omsk_wave/src/usb/: tusb_config.h  usb_audio.c  usb_config.h  usb_descriptors.c  usb_midi.c
firmware/shared/: README.md  hw_config.h  image_logo.h
firmware/shared/dsp/: fast_math.cpp  fast_math.h
firmware/shared/hardware/: colors.h  encoders.cpp  encoders.h  matrix.cpp  matrix.h  midi_helpers.h  midi_uart.cpp  midi_uart.h
firmware/shared/pio/: audio.pio  button_matrix.pio  i2s_tx.pio  ws2812.pio
hardware/case/: README.md  bot-omsk-mc.step  infopanel-omsk-screen-clip.step  knob-K-mc.step  knob-M-mc.step  knob-O-mc.step  top-omsk.step
hardware/case/CAD/: Omsk-ledsvisible.step  Omsk-rounded.step
hardware/pcb/: ENC.kicad_sch  IO.kicad_sch  KBD.kicad_sch  README.md  RGB.kicad_sch  omsk.kicad_pcb  omsk.kicad_pro  omsk.kicad_sch  synth.kicad_sym
