[project]
name = "granular"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8.0",
    "mido>=1.3.0",
    "numpy>=2.1.0",
    "pyside6>=6.7.0",
    "scipy>=1.13.0",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "python-rtmidi",
]
